--- a/package.json
+++ b/package.json
@@ -10,24 +10,22 @@
   },
   "dependencies": {
     "@next/swc-wasm-nodejs": "14.1.3",
-    "@types/node": "20.11.25",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
-    "autoprefixer": "10.4.18",
     "clsx": "^2.1.1",
-    "eslint": "9.15.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.446.0",
     "next": "14.1.3",
-    "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.0",
     "sass": "^1.72.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.1",
     "typescript": "5.4.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.9"
   }
 }
